# cognitive-load-balancer

./: .env.example  .gitignore  .replit  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  docker-compose.yml  package.json  pyproject.toml  replit.md
backend/: package.json  train_model.py
backend/src/: model_weights.json  predictor.js  server.js
backend/src/config/: __init__.js  constants.js  logger.js
backend/src/middleware/: auth.js
backend/src/models/: CognitiveLoad.js  ContextPreservation.js  Task.js  Telemetry.js  User.js
backend/src/routes/: __init__.js  authRoutes.js  cognitiveLoadRoutes.js  contextPreservationRoutes.js  telemetryRoutes.js  userRoutes.js
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
flask-microservice/: Dockerfile  app.py  requirements.txt
flask-microservice/app/: __init__.py
flask-microservice/models/: __init__.py  cognitive_load_predictor.py  eye_gaze_analyzer.py  telemetry_analyzer.py  typing_rhythm_analyzer.py
flask-microservice/routes/: cognitive_routes.py  cv_routes.py  telemetry_routes.py
flask-microservice/utils/: config.py  helpers.py  middleware.py
frontend/: Dockerfile.dev  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CognitiveLoadCard.jsx  (+2 more)
ml-models/: examples_checkpoint_generator.py
ml-models/cognitive_load/: __init__.py
ml-models/cv_models/: __init__.py
ml-models/nlp_models/: __init__.py  checkpoint_generator.py
vscode-extension/: INSTALL.md  package.json
vscode-extension/src/: api.js  extension.js  statusBar.js  telemetry.js
(+10 files in other folders)
