[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "gunicorn==21.2.0",
    "mediapipe>=0.10.32",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic==1.10.13",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "typing-extensions>=4.5.0",
]
